Fix netlify base directory path

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
-base = "phase-2/react-project/my-project" 
+[build]
+  base = "my-project" 
   command = "npm run build"
-  publish = "phase-2/react-project/my-project/dist"
+  publish = "my-project/dist"
