Add Netlify configuration file

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  base = "my-project" 
-  command = "npm run build"
+  command = "cd my-project && npm run build"
   publish = "my-project/dist"
+
