--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
 [build]
-  command = "cd my-project && npm run build"
-  publish = "my-project/dist"
-
+  command = "cd my-project && npm install && npm run build"
+  publish = "my-project/dist" 
